feat: add tailwindcss ❄︎

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,6 @@
-<h2>Hello World</h2>
-<p>
-  The time is now: <%= Time.now %>
-</p>
+<div>
+  <h2 class='font-3xl text-red-500'>Hello World</h2>
+  <p class='italic'>
+    The time is now: <%= Time.now %>
+  </p>
+</div>
