add navbar && pages w/ routes 🚜

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,6 @@
-<div>
-  <h2 class='font-3xl text-red-500'>Hello World</h2>
-  <p class='italic'>
-    The time is now: <%= Time.now %>
-  </p>
-</div>
+  <div class='mx-auto'>
+    <h2 class='text-3xl text-red-500 text-center'>Hello World</h2>
+    <p class='italic text-sm'>
+      The time is now: <%= Time.now %>
+    </p>
+  </div>
