chore: add github link 🏓

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,4 +3,11 @@
     <p class='italic text-sm'>
       The time is now: <%= Time.now %>
     </p>
+    <p>Check out the code for this site on 
+      <a 
+      href='https://github.com/Isaac-Tait/rubyOnRailsApp'
+      class='text-green-400 hover:underline'
+      target="_blank" 
+      rel="noopener noreferrer" 
+      >GitHub</a>.</p>
   </div>
