--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <h1 class='font-semibold text-2xl'>Sign Up</h1>
-    <%= form_with model: @user, url: sign_up_path do |form| %>
+    <%= form_with model: @user, url: sign_up_path, local: true do |form| %>
 
         <% if @user.errors.any? %>
             <div class='bg-red-100 border-l-4 border-red-500 text-red-700 p-4 mb-4'>
@@ -9,8 +9,7 @@
             </div>
         <% end %>
 
-        <div class='flex justify-center'>
-            
+        <div class='flex flex-col'>
             <div class='mx-2'>
                 <%= form.label :email %>
                 <%= form.text_field :email, placeholder: "youremailis@awesome.com" %>
@@ -26,9 +25,8 @@
                 <%= form.password_field :password_confirmation, placeholder: "Must match" %>
             </div>
             
-            <div class='mx-2 rounded-xl bg-amber-600 text-amber-200 px-2 hover:bg-amber-200 hover:text-amber-600 pointer-events-auto'>
-                <%= form.submit "Sign Up" %>
-            </div>
-
+            <button class='mx-2 rounded-xl bg-amber-600 text-amber-200 px-2 hover:bg-amber-200 hover:text-amber-600 pointer-events-auto'>
+                <%= form.submit %>
+            </button>
         </div>
     <% end %>
