--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,13 +1,23 @@
   <div class='mx-auto'>
     <h2 class='text-3xl text-red-500 text-center'>Hello World</h2>
+    <div class='bg-white rounded-xl px-2 text-left'>
+      <% if @user %>
+        Logged in as <%= @user.email %>
+
+        <div class='bg-orange-300 px-1 rounded-lg mt-2'>
+          <%= button_to "Logout", log_out_path, method: :delete %>
+        </div>
+      <% end %>
+    </div>
     <p class='italic text-sm'>
       The time is now: <%= Time.now %>
     </p>
     <p>Check out the code for this site on 
       <a 
-      href='https://github.com/Isaac-Tait/rubyOnRailsApp'
-      class='text-green-400 hover:underline'
-      target="_blank" 
-      rel="noopener noreferrer" 
-      >GitHub</a>.</p>
+        href='https://github.com/Isaac-Tait/rubyOnRailsApp'
+        class='text-green-400 hover:underline'
+        target="_blank" 
+        rel="noopener noreferrer" 
+      >GitHub</a>.
+    </p>
   </div>
