--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,1 +1,1 @@
-<h2 class='text-green-500'>About the author - <span class='underline'>Isaac Tait</span></h2>
+<h2>About the author - Isaac Tait</h2>
