--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,9 @@
   <body>
     <%= render partial: "shared/navbar" %>
     <main>
-      <%= yield %>
+      <div class='container'>
+        <%= yield %>
+      </div>
     </main>
   </body>
 </html>
