--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -25,6 +25,6 @@
             </div>
             
             <div class="mb-2">
-                <%= form.submit "Sign Up" %>
+                <%= form.submit "Sign Up", class: "btn btn-primary" %>
             </div>
     <% end %>
