--- a/app/views/passwords/edit.html.erb
+++ b/app/views/passwords/edit.html.erb
@@ -1,18 +1,13 @@
-<h1>Sign Up</h1>
-    <%= form_with model: @user, url: sign_up_path, local: true do |form| %>
+<h1>Edit Password</h1>
+    <%= form_with model: Current.user, url: edit_password_path, local: true do |form| %>
 
         <% if form.object.errors.any? %>
-            <div>
-                <%= form.object.errors.full_messages.each do |message| %>
+            <div class="alert alert-danger">
+                <% form.object.errors.full_messages.each do |message| %>
                     <div><%= message %></div>
                 <% end %>
             </div>
         <% end %>
-
-            <div class="mb-2">
-                <%= form.label :email %>
-                <%= form.text_field :email, class: "form-control", placeholder: "youremailis@awesome.com" %>
-            </div>
             
             <div class="mb-2">
                 <%= form.label :password %>
@@ -25,6 +20,6 @@
             </div>
             
             <div class="mb-2">
-                <%= form.submit "Sign Up", class: "btn btn-primary" %>
+                <%= form.submit "Update Password", class: "btn btn-primary" %>
             </div>
     <% end %>
