--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -19,6 +19,23 @@
           <a class="nav-link" href="/sign_up">Sign Up</a>
         </li>
       </ul>
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">  
+        <% if Current.user %>
+        <li class="nav-item">
+          <%= link_to Current.user.email, edit_password_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= button_to "Logout", log_out_path, method: :delete, class: "ms-2 btn btn-outline-secondary" %>
+        </li>
+        <% else %>
+          <li class="nav-item">
+            <%= link_to "Login", sign_in_path, class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "Sign Up", sign_up_path, class: "nav-link" %>
+          </li>
+        <% end %>
+      </ul>
     </div>
   </div>
 </nav>  
